--- a/PokedexFragments/app/src/main/AndroidManifest.xml
+++ b/PokedexFragments/app/src/main/AndroidManifest.xml
@@ -1,12 +1,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.szindi.dmit2504.pokedexfragments">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".PokemonFragmentActivity"
+            android:label="Pokemon and Stats">
+
+        </activity>
+        <activity
+            android:name=".AbilitiesMovesFragmentActivity"
+            android:label="Moves and Abilities" />
+        <activity
+            android:name=".PokedexActivity"
+            android:label="Pokedex">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
